--- a/LogIn-SignUp/App/Dockerfile
+++ b/LogIn-SignUp/App/Dockerfile
@@ -1,6 +1,5 @@
-FROM php:7.0-apache
+FROM php:7-apache
 
-RUN docker-php-ext-install mysqli pdo_mysql
+RUN docker-php-ext-install pdo pdo_mysql
 
 COPY . /var/www/html/
-
